[maven-release-plugin] prepare release g-leaflet-draw-0.4.6

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <!-- POM file generated with GWT webAppCreator -->
     <modelVersion>4.0.0</modelVersion>
 
-    <version>0.4.6-SNAPSHOT</version>
+    <version>0.4.6</version>
     <groupId>org.peimari</groupId>
     <artifactId>g-leaflet-draw</artifactId>
     <packaging>jar</packaging>
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.peimari</groupId>
             <artifactId>g-leaflet</artifactId>
-            <version>0.4.6-SNAPSHOT</version>
+            <version>0.4.6</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
