build against latest v-leaflet (with some breaking changes) and removed obsolete dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.peimari</groupId>
             <artifactId>g-leaflet</artifactId>
-            <version>0.4.9-SNAPSHOT</version>
+            <version>0.4.11</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -57,13 +57,14 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.6.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.2</version>
+            <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 
