--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <!-- POM file generated with GWT webAppCreator -->
     <modelVersion>4.0.0</modelVersion>
 
-    <version>0.4.12-SNAPSHOT</version>
+    <version>0.4.13</version>
     <groupId>org.peimari</groupId>
     <artifactId>g-leaflet-draw</artifactId>
     <packaging>jar</packaging>
